...
        self.creationText = creationText

        self.isFavorite = LocalStorage.isFavorite(id: item.id)
    }

    static func favoritesButtonTitleFor(_ isFavorite: Bool) -> String {
        return isFavorite ? "Remove from favorites" : "Add to favorites"
    }
}

