...
    
    var characterView: CharacterView = UIView.loadView(identifier: CharacterView.identifier)

    override func viewDidLoad() {
        super.viewDidLoad()

        title = "Details"

        characterView.frame = view.bounds
        view.addSubview(characterView)

        NetworkManager.shared.characterService.with(id: characterId) { [weak self] (result) in
            switch result {
...
