...
            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
        </scene>
        <!--Favorites-->
        <scene sceneID="oCK-hG-Uyn">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9CO-Fp-mcx" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favorites" image="second" id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cmB-F6-S5o">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" red="0.61960784310000006" green="0.61960784310000006" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
...
